--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="hero"></div>
     <!-- Main content section  -->
     <div class="content">
-        <div class="search-engine-optimization">
+        <section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
                 alt="A work station with a notebook,laptop and etc." />
             <h2>Search Engine Optimization</h2>
@@ -37,8 +37,8 @@
                 travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
                 your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        </section>
+        <section id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right"
                 alt="A work station with a person using thier laptop and smartphone." />
             <h2>Online Reputation Management</h2>
@@ -47,8 +47,8 @@
                 internet connection to say whatever they want about your business. Online Reputation Management gives
                 you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        </section>
+        <section id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left"
                 alt="A meeting with multiple people discussing marketing." />
             <h2>Social Media Marketing</h2>
@@ -57,33 +57,33 @@
                 determine which platforms are suited to your brand, using analytics to find the right markets and
                 increase your lead generation.
             </p>
-        </div>
+        </section>
     </div>
     <div class="benefits">
-        <div class="benefit-lead">
+        <section class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="lead-generation icon" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </section>
+        <section class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="brand-awareness icon" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </section>
+        <section class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="cost-management icon"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
             </p>
-        </div>
+        </section>
     </div>
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
